--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <body>
         <h1>This is a Header</h1>
-        <p>
-            this is a paragraph
-        </p>
+        <p>this is a paragraph</p>
+        <p>this is another paragraph</p>
+        
     </body>
+    
 </html>
